--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,12 +2,13 @@ name: Fetch Weather and Post to Tandem
 
 on:
   schedule:
-    - cron: '*/30 * * * *'  # Every 30 minutes (UTC)
-  workflow_dispatch:
+    - cron: '*/30 * * * *'  # Runs every 30 minutes (UTC)
+  workflow_dispatch:        # Optional: allow manual trigger
 
 jobs:
   update_and_post:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -22,36 +23,31 @@ jobs:
 
       - name: Fetch weather and write stream.json
         run: |
-          python -c "
-import requests, json
+          echo "import requests
+import json
+
 API_KEY = '0b4192116572f42a2606602c1a8d46c2'
 CITY = 'Delft'
 url = f'https://api.openweathermap.org/data/2.5/weather?q={CITY}&appid={API_KEY}&units=metric'
 r = requests.get(url)
 d = r.json()
+
 with open('stream.json', 'w') as f:
     json.dump({
         'temperature': d['main']['temp'],
         'humidity': d['main']['humidity']
     }, f, indent=2)
-          "
+" > fetch_weather.py
+          python fetch_weather.py
 
       - name: Commit updated stream.json
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add stream.json
-          git commit -m "Update stream.json with latest weather data" || echo "No changes"
+          git commit -m "Update stream.json with live weather data" || echo "No changes to commit"
           git push
 
-      - name: Send JSON to Tandem (Temperature Stream)
+      - name: Send JSON Data to First URL (Temperature)
         run: |
-          curl -X POST "https://:059UiG4ZQYeDvz9PoW600w@tandem.autodesk.com/api/v1/timeseries/models/urn:adsk.dtm:ST5-WSDoQcm5VZSn84_kGQ/streams/AQAAAKyrPhWZC0GUrXd18gpY0CoAAAAA" \
-               -H "Content-Type: application/json" \
-               -d @stream.json
-
-      - name: Send JSON to Tandem (Humidity Stream)
-        run: |
-          curl -X POST "https://:LA1-6cosQUCKzXPl1h7E5A@tandem.autodesk.com/api/v1/timeseries/models/urn:adsk.dtm:ST5-WSDoQcm5VZSn84_kGQ/streams/AQAAAHiguQoVW0iXhe77Q_4n9vcAAAAA" \
-               -H "Content-Type: application/json" \
-               -d @stream.json
+          curl -X POST "https://:059UiG4ZQYeDvz9PoW600w@tandem.autodesk.com/api/v1/t
